--- a/src/activity/activity.component.html
+++ b/src/activity/activity.component.html
@@ -19,9 +19,9 @@
     <td mat-cell *matCellDef="let element">{{element.dislikes}}</td>
   </ng-container>
 
-  <ng-container matColumnDef="comments" >
+  <ng-container matColumnDef="comments">
     <th mat-header-cell *matHeaderCellDef>Comments</th>
-    <td mat-cell *matCellDef="let element">{{element.comments}}</td>
+    <td mat-cell *matCellDef="let element"><span *ngFor="let comment of element.comments">{{comment.value}},</span></td>
   </ng-container>
 
 
